--- a/48813-h/48813-h.htm
+++ b/48813-h/48813-h.htm
@@ -46,7 +46,7 @@ table {margin-left:auto; margin-right:auto;}
     img.dc { float: left; width: 50px; height: 50px; }
     p.gutindent { margin-left: 2em; }
     div.gapspace { height: 0.8em; }
-    div.gapline { height: 0.8em; width: 100%; border-top: 1px solid;} 
+    div.gapline { height: 0.8em; width: 100%; border-top: 1px solid;}
     div.gapmediumline { height: 0.3em; width: 40%; margin-left:30%;
                   border-top: 1px solid; }
     div.gapmediumdoubleline { height: 0.3em; width: 40%; margin-left:30%;
@@ -83,9 +83,9 @@ The Project Gutenberg eBook, The Black Diamond, by F. Brett Young
 
 
 This eBook is for the use of anyone anywhere in the United States and most
-other parts of the world at no cost and with almost no restrictions 
+other parts of the world at no cost and with almost no restrictions
 whatsoever.  You may copy it, give it away or re-use it under the terms of
-the Project Gutenberg License included with this eBook or online at 
+the Project Gutenberg License included with this eBook or online at
 www.gutenberg.org.  If you are not located in the United States, you'll have
 to check the laws of the country where you are located before using this ebook.
 
@@ -939,7 +939,7 @@ leg.&rsquo;</p>
 &lsquo;She&rsquo;ll have to come if I send for her.&nbsp;
 Tak&rsquo; your hook now!&rsquo;</p>
 <p>While Abner dressed, his father was prowling from room to room
-letting the tallow from the candle drip clown the front of his
+letting the tallow from the candle drip down the front of his
 trousers, and shouting at the boy to hurry up from time to
 time.&nbsp; In a few minutes Abner was ready and had crossed the
 patch of waste ground that lay between the terrace and the
@@ -16423,9 +16423,9 @@ and permanent future for Project Gutenberg-tm and future
 generations. To learn more about the Project Gutenberg Literary
 Archive Foundation and how your efforts and donations can help, see
 Sections 3 and 4 and the Foundation information page at
-www.gutenberg.org 
+www.gutenberg.org
 
-Section 3. Information about the Project Gutenberg Literary 
+Section 3. Information about the Project Gutenberg Literary
 Archive Foundation
 
 The Project Gutenberg Literary Archive Foundation is a non profit
